# CoMISo

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  index-1.html
Base/: .clang-format  README.md
Base/Code/: CodeLink.hh  Quality.hh
Base/Config/: BaseDefines.hh
Base/Debug/: DebCallStack.cc  DebCallStack.hh  DebConfig.cc  DebConfig.hh  DebError.hh  DebFile.cc  DebFile.hh  DebIndexMeshOut.cc  DebIndexMeshOut.hh  DebOut.hh  DebStream.cc  DebTime.hh  DebUtils.hh
Base/Paths/: Filesystem.hh  PathLink.hh
Base/Progress/: ProgressIReport.cc  ProgressIReport.hh  ProgressNode.cc  ProgressNode.hh  ProgressScope.hh
Base/Security/: Mandatory.hh
Base/Test/: LongestCommonSubsequenceT.hh  README.md  TestArgs.cc  TestArgs.hh  TestCase.hh  TestChecksum.cc  TestChecksum.hh  TestChecksumCompletion.cc  TestChecksumCompletion.hh  TestChecksumCondition.cc  TestChecksumCondition.hh  TestChecksumDebugEvent.cc  TestChecksumDebugEvent.hh  TestChecksumFile.cc  TestChecksumFile.hh  TestChecksumIssueNumber.cc  TestChecksumIssueNumber.hh  TestChecksumLevel.hh  TestChecksumNumberT.hh  TestChecksumOutcome.cc  TestChecksumOutcome.hh  TestChecksumReport.hh  TestError.cc  TestError.hh  TestErrorInc.hh  TestOutcome.cc  TestOutcome.hh  TestPaths.cc  TestPaths.hh  TestReport.cc  TestReport.hh  TestResult.hh
Base/Utils/: BaseError.cc  BaseError.hh  BaseErrorInc.hh  BufferedOutputFile.hh  Environment.cc  Environment.hh  FileOutput.cc  FileOutput.hh  IOutputStream.cc  IOutputStream.hh  NullOutputStream.cc  NullOutputStream.hh  OStringStream.cc  OStringStream.hh  Option.cc  OptionT.hh  RedirectStream.cc  RedirectStream.hh  SafeSharedPtrT.hh  Scope.hh  StopWatch.cc  StopWatch.hh  Thread.hh  ThrowError.hh
CI/: Windows.bat
Config/: GmmTypes.hh  StdTypes.hh  config.hh.in
EigenSolver/: ArpackSolver.hh  EigenArpackMatrixT.hh  EigenArpackMatrixT_impl.hh
Examples/small_AQP/: CMakeLists.txt
Examples/small_adolc/: CMakeLists.txt
Examples/small_cplex_soc/: CMakeLists.txt  main.cc
Examples/small_eigenproblem/: CMakeLists.txt  main.cc
Examples/small_exact_constraint_satifaction_example/: CMakeLists.txt  main.cc
Examples/small_factored_example/: CMakeLists.txt  main.cc
Examples/small_finite_element/: CMakeLists.txt
Examples/small_linear_problem/: CMakeLists.txt  main.cc
Examples/small_miqp/: CMakeLists.txt
Examples/small_nleast_squares/: CMakeLists.txt
Examples/small_nsolver/: CMakeLists.txt
Examples/small_quadratic_example/: CMakeLists.txt  main.cc
Examples/small_quadratic_resolve_example/: CMakeLists.txt  main.cc
Examples/small_sparseqr/: CMakeLists.txt
Examples/small_symmetric_dirichlet/: CMakeLists.txt  main.cc
NSolver/: AcceleratedQuadraticProxy.hh  BoundConstraint.hh  COMISOSolver.cc  COMISOSolver.hh  CPLEXSolver.hh  CombinedProblem.hh  ConeConstraint.cc  ConeConstraint.hh  ConstraintTools.cc  ConstraintTools.hh  FiniteElementProblem.hh  GUROBISolver.cc  GUROBISolver.hh  IPOPTCallbackParameters.hh  IPOPTProblemInstance.cc  IPOPTProblemInstance.hh  IPOPTSolver.cc  IPOPTSolver.hh  LPSolveSolver.cc  LPSolveSolver.hh  LazyConstraintSolver.hh  LinearConstraint.cc  LinearConstraint.hh  LinearConstraintConverter.hh  LinearConstraintHandlerElimination.cc  LinearConstraintHandlerElimination.hh  LinearConstraintHandlerPenalty.cc  LinearConstraintHandlerPenalty.hh  LinearProblem.hh  NConstraintInterface.hh  NConstraintInterfaceAD.hpp  NConstraintInterfaceADOLC.hpp  NPDerivativeChecker.hh  NPLinearConstraints.cc  NPLinearConstraints.hh  NPLinearConstraintsT_impl.hh  NPTiming.hh  NProblemGmmInterface.hh  NProblemInterface.hh  NProblemInterfaceAD.hpp  (+12 more)
QtWidgets/: MISolverDialogUI.cc  MISolverDialogUI.hh  QtMISolverDialogBaseUI.ui
Solver/: CholmodSolver.hh  CholmodSolverT_impl.hh  ConstrainedSolver.cc  ConstrainedSolver.hh  ConstrainedSolverT_impl.hh  EigenCholmodSolver.cc  EigenCholmodSolver.hh  EigenCholmodSolverT_impl.hh  EigenLDLTSolver.cc  EigenLDLTSolver.hh  EigenLDLTSolverT_impl.hh  EigenLSQSolver.cc  EigenLSQSolver.hh  EigenLSQSolverT_impl.hh  Eigen_Tools.hh  Eigen_ToolsT_impl.hh  GMM_Tools.cc  GMM_Tools.hh  GMM_ToolsT_impl.hh  IterativeSolver.cc  IterativeSolverT.hh  IterativeSolverT_impl.hh  MISolver.cc  MISolver.hh  MultiDimConstrainedSolver.cc  MultiDimConstrainedSolverT.hh  MultiDimConstrainedSolverT_impl.hh  SolverBaseT.hh  SparseQRSolver.hh  SparseQRSolverT_impl.hh  SubProblemSolver.cc  SubProblemSolverT.hh  SubProblemSolverT_impl.hh  TaucsSolver.hh  UMFPACKSolver.hh  UMFPACKSolverT_impl.hh
Utils/: CoMISoErrorInc.hh  ExactConstraintSatisfaction.cc  ExactConstraintSatisfaction.hh  MutablePriorityQueueT.hh  ProblemSubsetMapT.hh  Tagging.hh  Tools.hh  VectorT.hh  gmm.hh
cmake/: CoMISoExample.cmake  FindCBC.cmake  FindCGL.cmake  FindCLP.cmake  FindCOINUTILS.cmake  FindCoMISo.cmake  FindGMM.cmake  FindIPOPT.cmake  FindMETIS.cmake  FindMUMPS.cmake  FindOSI.cmake  FindSPECTRA.cmake  FindSUITESPARSE.cmake
